--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -9,14 +9,15 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout repository
+      - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Node.js
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: '20'
           cache: 'npm'
 
       - name: Install dependencies
@@ -25,30 +26,34 @@ jobs:
       - name: Install Capacitor packages
         run: npm install @capacitor/core @capacitor/cli @capacitor/android
 
-      - name: Build web application
+      - name: Build the web app
         run: npm run build
+        env:
+          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
 
-      - name: Add Android platform and Sync
-        run: |
-          npx cap add android
-          npx cap sync android
+      - name: Initialize Capacitor
+        run: npx cap init "Executive Checklist" com.executive.checklist --web-dir dist || true
 
-      - name: Set up Java 17
+      - name: Add Android platform
+        run: npx cap add android
+
+      - name: Sync Capacitor
+        run: npx cap sync
+
+      - name: Setup Java 17
         uses: actions/setup-java@v4
         with:
           distribution: 'zulu'
           java-version: '17'
 
-      - name: Make Gradle Wrapper Executable
-        run: chmod +x ./android/gradlew
-
-      - name: Build Android APK
+      - name: Build APK
         run: |
           cd android
+          chmod +x ./gradlew
           ./gradlew assembleDebug
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
-          name: app-debug.apk
+          name: executive-checklist-debug-apk
           path: android/app/build/outputs/apk/debug/app-debug.apk
