--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -2,5 +2,17 @@
   "appId": "com.executive.checklist",
   "appName": "Executive Checklist",
   "webDir": "dist",
-  "bundledWebRuntime": false
+  "bundledWebRuntime": false,
+  "server": {
+    "androidScheme": "https",
+    "cleartext": true
+  },
+  "plugins": {
+    "CapacitorCookies": {
+      "enabled": true
+    },
+    "CapacitorHttp": {
+      "enabled": true
+    }
+  }
 }
